@@ -57,6 +57,7 @@ static const IdStrMap img_tags[] = {
     { AV_CODEC_ID_SGI       , "sgi"},
     { AV_CODEC_ID_PTX       , "ptx"},
     { AV_CODEC_ID_PCX       , "pcx"},
+    { AV_CODEC_ID_BRENDER_PIX, "pix"},
     { AV_CODEC_ID_SUNRAST   , "sun"},
     { AV_CODEC_ID_SUNRAST   , "ras"},
     { AV_CODEC_ID_SUNRAST   , "rs"},
